# VTKHoughPlanes

./: CMakeLists.txt  HoughPlanes.kdev4  LICENSING  README  planesPoints.ply  planesPoints.vtp
VTKJournal/: HoughPlanes.tex  papers.bib
data/: counter.vtp  counterPlanes.vtp  output.vtp
include/: ConfigFileHough.h  accumulator.h  convexplane.h  hough.h  ransac.h  ransac_Boctree.h  vtkHoughPlanes.h
include/shapes/: ConfigFileHough.h  hough.h
include/slam6d/: Boctree.h  kd.h  scan.h  scan_io_vtp.h
src/: CMakeCache.txt  CMakeLists.txt  ConfigFileHough.cc  HoughPlanes.cpp  accumulator.cc  convexplane.cc  geom_math.cc  hough.cc  hsm3d.cc  parascan.cc  vtkHoughPlanes.cxx  vtkHoughPlanes.h
src/shapes/: CMakeLists.txt  Makefile  accumulator.cc  hough.cc  plane.cc  vtk.cpp
src/slam6d/: CMakeLists.txt  Makefile  scan.cc  scan_io_riegl_old.cc  scan_io_rxp.cc  scan_io_uos.cc  scan_io_vtp.cc
