FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

add_library(scan_io_uos             SHARED scan_io_uos.cc            )
add_library(scan_io_uos_map         SHARED scan_io_uos_map.cc        )
add_library(scan_io_uos_frames      SHARED scan_io_uos_frames.cc     )
add_library(scan_io_uos_map_frames  SHARED scan_io_uos_map_frames.cc )
add_library(scan_io_old             SHARED scan_io_old.cc            )
add_library(scan_io_x3d             SHARED scan_io_x3d.cc            )
add_library(scan_io_asc             SHARED scan_io_asc.cc            )
add_library(scan_io_rts             SHARED scan_io_rts.cc            )
add_library(scan_io_iais            SHARED scan_io_iais.cc           )
add_library(scan_io_rts_map         SHARED scan_io_rts_map.cc        )
add_library(scan_io_front           SHARED scan_io_front.cc          )
add_library(scan_io_riegl_txt       SHARED scan_io_riegl_txt.cc      )
add_library(scan_io_riegl_rgb       SHARED scan_io_riegl_rgb.cc      )
add_library(scan_io_riegl_bin       SHARED scan_io_riegl_bin.cc      )
add_library(scan_io_zuf             SHARED scan_io_zuf.cc            )
add_library(scan_io_xyz             SHARED scan_io_xyz.cc            )
add_library(scan_io_ifp             SHARED scan_io_ifp.cc            )
add_library(scan_io_ply             SHARED scan_io_ply.cc            )
add_library(scan_io_vtp             SHARED scan_io_vtp.cc            )
add_library(scan_io_wrl             SHARED scan_io_wrl.cc            )
add_library(scan_io_zahn            SHARED scan_io_zahn.cc           )
add_library(scan_io_ais             SHARED scan_io_ais.cc            )
add_library(scan_io_uos_rgb         SHARED scan_io_uos_rgb.cc        )
add_library(scan_io_xyzr            SHARED scan_io_xyzr.cc           )
add_library(scan_io_oct             SHARED scan_io_oct.cc point_type.cc)

target_link_libraries(scan_io_vtp ${VTK_DIR}/bin/libvtkHybrid.so ${VTK_DIR}/bin/libvtklibxml2.so ${VTK_DIR}/bin/libvtkIO.so)

IF(WIN32)
target_link_libraries(scan_io_oct scanlib)
ENDIF(WIN32)

SET(SCANLIB_SRCS
  kd.cc kdc.cc  kd ann_kd.cc    scan.cc d2tree.cc  point_type.cc	
)

add_library(scanlib STATIC ${SCANLIB_SRCS})
target_link_libraries(scanlib)
